# anynote_web

./: .gitignore  APIDOCS.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django.yml
anynote/: conftest.py  manage.py
anynote/anynote/: asgi.py  settings.py  urls.py  wsgi.py
anynote/api/: __init__.py  router.py  serializers.py  urls.py  views.py
anynote/api/tests/: test_api.py
anynote/api/tests/fixtures/: __init__.py  client.py  user.py
anynote/main/: admin.py  apps.py  models.py  urls.py  views.py
anynote/main/migrations/: 0001_initial.py
anynote/main/static/main/css/: account.css  account.css.map  login.css  login.css.map  registration.css  registration.css.map
anynote/main/templates/main/: account.html  login.html  registration.html
anynote/tests/: conftest.py  test_api.py
anyvenv/: pyvenv.cfg
anyvenv/Scripts/: activate  activate.bat
